# ChangeLog for net-im/ekg2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/ekg2/ChangeLog,v 1.55 2015/04/08 18:03:12 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> ekg2-0.3.1-r1.ebuild,
  ekg2-9999.ebuild:
  Drop old Python implementations

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> ekg2-0.3.1-r1.ebuild,
  ekg2-9999.ebuild:
  Remove trailing '.' from DESCRIPTION.

  16 Oct 2013; Michał Górny <mgorny@gentoo.org> ekg2-9999.ebuild:
  Switch to git-r3. Add SLOT operators to dependencies.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> ekg2-0.3.1-r1.ebuild,
  ekg2-9999.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  21 Mar 2013; Michał Górny <mgorny@gentoo.org> ekg2-0.3.1-r1.ebuild,
  ekg2-9999.ebuild, metadata.xml:
  Remove USE=inotify, make it automagically detected per-system.

  17 Dec 2012; Michał Górny <mgorny@gentoo.org> ekg2-0.3.1-r1.ebuild,
  ekg2-9999.ebuild:
  Bump to EAPI=5 to make Paludis happy, bug #447524.

*ekg2-9999 (15 Dec 2012)

  15 Dec 2012; Michał Górny <mgorny@gentoo.org> +ekg2-9999.ebuild, metadata.xml:
  Import the live ebuild.

  30 Nov 2012; Michał Górny <mgorny@gentoo.org> ekg2-0.3.1-r1.ebuild:
  EAPI bump, use the new prune_libtool_files function and python-single-r1.

  30 Aug 2011; Michał Górny <mgorny@gentoo.org> ekg2-0.3.1-r1.ebuild:
  USE=jabber -> USE=xmpp; fixes bug #362649.

*ekg2-0.3.1-r1 (06 Apr 2011)

  06 Apr 2011; Michał Górny <mgorny@gentoo.org>
  +files/0001-Gentoo-use-vendor-dirs-for-perl-modules.patch,
  -ekg2-0.3.0.ebuild, -ekg2-0.3.1.ebuild, +ekg2-0.3.1-r1.ebuild:
  Install Perl modules in vendor-dir instead of site-dir. Drop old version.
  Fixes bug #362231.

*ekg2-0.3.1 (01 Apr 2011)

  01 Apr 2011; Michał Górny <mgorny@gentoo.org> +ekg2-0.3.1.ebuild:
  Version bump. The new version introduces SSL support for the irc plugin.

  26 Feb 2011; Kevin McCarthy <signals@gentoo.org> ekg2-0.3.0.ebuild: