@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare pretend setup test
-DEPEND=gpg? ( app-crypt/gpgme ) gsm? ( media-sound/gsm ) gtk? ( x11-libs/gtk+:2 ) idn? ( net-dns/libidn ) nls? ( virtual/libintl ) oracle? ( dev-db/oracle-instantclient-basic ) perl? ( dev-lang/perl ) python? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) readline? ( sys-libs/readline ) ssl? ( dev-libs/openssl ) xosd? ( x11-libs/xosd ) zlib? ( sys-libs/zlib ) gadu? ( net-libs/libgadu gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) ) ncurses? ( sys-libs/ncurses[unicode?] gpm? ( sys-libs/gpm ) spell? ( app-text/aspell ) ) rss? ( dev-libs/expat ) sqlite3? ( dev-db/sqlite:3 ) !sqlite3? ( sqlite? ( dev-db/sqlite:0 ) ) xmpp? ( dev-libs/expat gnutls? ( net-libs/gnutls ) ) nls? ( sys-devel/gettext )
+DEPEND=gpg? ( app-crypt/gpgme ) gsm? ( media-sound/gsm ) gtk? ( x11-libs/gtk+:2 ) idn? ( net-dns/libidn ) nls? ( virtual/libintl ) oracle? ( dev-db/oracle-instantclient-basic ) perl? ( dev-lang/perl ) python? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) readline? ( sys-libs/readline ) ssl? ( dev-libs/openssl ) xosd? ( x11-libs/xosd ) zlib? ( sys-libs/zlib ) gadu? ( <net-libs/libgadu-1.12 gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) ) ncurses? ( sys-libs/ncurses[unicode?] gpm? ( sys-libs/gpm ) spell? ( app-text/aspell ) ) rss? ( dev-libs/expat ) sqlite3? ( dev-db/sqlite:3 ) !sqlite3? ( sqlite? ( dev-db/sqlite:0 ) ) xmpp? ( dev-libs/expat gnutls? ( net-libs/gnutls ) ) nls? ( sys-devel/gettext )
 DESCRIPTION=Text-based, multi-protocol instant messenger
 EAPI=5
 HOMEPAGE=http://www.ekg2.org
 IUSE=gadu gif gnutls gpg gpm gsm gtk idn jpeg ncurses nls oracle perl python readline rss spell sqlite sqlite3 ssl threads unicode xmpp xosd zlib python_targets_python2_7
 KEYWORDS=~amd64 ~ppc ~x86
 LICENSE=GPL-2
-RDEPEND=gpg? ( app-crypt/gpgme ) gsm? ( media-sound/gsm ) gtk? ( x11-libs/gtk+:2 ) idn? ( net-dns/libidn ) nls? ( virtual/libintl ) oracle? ( dev-db/oracle-instantclient-basic ) perl? ( dev-lang/perl ) python? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) readline? ( sys-libs/readline ) ssl? ( dev-libs/openssl ) xosd? ( x11-libs/xosd ) zlib? ( sys-libs/zlib ) gadu? ( net-libs/libgadu gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) ) ncurses? ( sys-libs/ncurses[unicode?] gpm? ( sys-libs/gpm ) spell? ( app-text/aspell ) ) rss? ( dev-libs/expat ) sqlite3? ( dev-db/sqlite:3 ) !sqlite3? ( sqlite? ( dev-db/sqlite:0 ) ) xmpp? ( dev-libs/expat gnutls? ( net-libs/gnutls ) )
+RDEPEND=gpg? ( app-crypt/gpgme ) gsm? ( media-sound/gsm ) gtk? ( x11-libs/gtk+:2 ) idn? ( net-dns/libidn ) nls? ( virtual/libintl ) oracle? ( dev-db/oracle-instantclient-basic ) perl? ( dev-lang/perl ) python? ( >=dev-lang/python-2.7.5-r2:2.7 >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] ) readline? ( sys-libs/readline ) ssl? ( dev-libs/openssl ) xosd? ( x11-libs/xosd ) zlib? ( sys-libs/zlib ) gadu? ( <net-libs/libgadu-1.12 gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) ) ncurses? ( sys-libs/ncurses[unicode?] gpm? ( sys-libs/gpm ) spell? ( app-text/aspell ) ) rss? ( dev-libs/expat ) sqlite3? ( dev-db/sqlite:3 ) !sqlite3? ( sqlite? ( dev-db/sqlite:0 ) ) xmpp? ( dev-libs/expat gnutls? ( net-libs/gnutls ) )
 SLOT=0
 SRC_URI=http://pl.ekg2.org/ekg2-0.3.1.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	7a178335dbd6ea7f50ed4e3e1c13c1e4	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d21ef997396a5f89860144cd504e9b64
+_md5_=42c895f9a899bd6953878f0d0401b484
